// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`click 1`] = `
<div>
  test component
  
  <div
    id="value"
  >
    false
  </div>
   
  <label
    class="seu-radio-button"
    role="radio"
    tabindex="0"
  >
    <input
      aria-hidden="true"
      class="seu-radio-button__orig-radio"
      tabindex="-1"
      type="radio"
      value="1"
    />
     
    <span
      class="seu-radio-button__inner"
    >
      label1
       
    </span>
  </label>
   
  <label
    class="seu-radio-button"
    role="radio"
    tabindex="0"
  >
    <input
      aria-hidden="true"
      class="seu-radio-button__orig-radio"
      tabindex="-1"
      type="radio"
      value="2"
    />
     
    <span
      class="seu-radio-button__inner"
    >
      label2
       
    </span>
  </label>
</div>
`;

exports[`click 2`] = `
<div>
  test component
  
  <div
    id="value"
  >
    1
  </div>
   
  <label
    aria-checked="true"
    class="seu-radio-button is-active"
    role="radio"
    tabindex="0"
  >
    <input
      aria-hidden="true"
      class="seu-radio-button__orig-radio"
      tabindex="-1"
      type="radio"
      value="1"
    />
     
    <span
      class="seu-radio-button__inner"
    >
      label1
       
    </span>
  </label>
   
  <label
    class="seu-radio-button"
    role="radio"
    tabindex="0"
  >
    <input
      aria-hidden="true"
      class="seu-radio-button__orig-radio"
      tabindex="-1"
      type="radio"
      value="2"
    />
     
    <span
      class="seu-radio-button__inner"
    >
      label2
       
    </span>
  </label>
</div>
`;
